skeplib/tests/fixtures/sema_project/invalid/ambiguous_file_folder/a.sk
fn fa() -> Int { return 1; }
